--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,3 +152,30 @@
 .dropdown-menu.show {
   display: block;
 }
+.profile-menu {
+    z-index: 1050;
+}
+
+.menu-container {
+    width: 285px;
+    background: #FFFFFF;
+    border-radius: 1rem;
+    box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+}
+
+.avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.company-logo {
+    width: 32px;
+    height: 32px;
+    border-radius: 8px;
+    background: #F5F5F8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
