--- a/views/Vacancy.ejs
+++ b/views/Vacancy.ejs
@@ -2,21 +2,18 @@
 <html lang="ru" is="dmx-app" id="Vacancy" appConnect="local">
 
 <head>
-    <!-- Wappler include head-page="layouts/Header" fontawesome_5="cdn" bootstrap5="local" is="dmx-app" id="Vacancy" appConnect="local" -->
+    <base href="/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="ac:route" content="/Vacancy">
     <title>Вакансии</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!-- Bootstrap 5 CSS -->
+    <link rel="stylesheet" href="/bootstrap/5/css/bootstrap.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -26,7 +23,7 @@
         <dmx-partial path="/partials/header1"></dmx-partial>
     </header>
 
-    <div class="container-fluid">
+    <div class="container pt-4">
         <div class="row">
             <!-- Filters Column -->
             <div class="col-md-3">
@@ -35,7 +32,7 @@
             </div>
 
             <!-- Main Content -->
-            <div class="col-md-9 bg-light p-4">
+            <div class="col-md-9 bg-light p-4 rounded">
                 <!-- Search Bar -->
                 <div class="row mb-4">
                     <div class="col">
@@ -103,9 +100,7 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS Dependencies -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="/bootstrap/5/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
