--- a/views/partials/header1.ejs
+++ b/views/partials/header1.ejs
@@ -73,6 +73,9 @@
                             <a class="nav-link text-secondary" href="#">Проекты</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-secondary" href="#">Исполнители</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-secondary" href="#">Мои сообщения</a>
                         </li>
                         <li class="nav-item">
