--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -16,8 +16,8 @@
                     <span fid="18:10281" fname="Добро пожаловать! 👋🏻" id="_18_10281">
                         Добро пожаловать! 👋🏻
                     </span>
-                    <span fid="18:10282" fname="FindJob - это уникальная платформа,где компании и фрилансеры могут находить другдруга для сотрудничества в сфере IT" id="_18_10282">
-                        FindJob - это уникальная платформа,
+                    <span fid="18:10282" fname="Get Best Team - это уникальная платформа,где компании и фрилансеры могут находить другдруга для сотрудничества в сфере IT" id="_18_10282">
+                        Get Best Team - это уникальная платформа,
                         <br>
                         где компании и фрилансеры могут находить друг
                         <br>
