--- a/views/partials/header1.ejs
+++ b/views/partials/header1.ejs
@@ -60,7 +60,7 @@
                 <!-- Логотип и название -->
                 <div class="col-auto d-flex align-items-center">
                     <div class="rounded-3 me-2" style="width: 36px; height: 36px; background-color: #4777EA"></div>
-                    <span class="fs-5 fw-medium">Find Job</span>
+                    <span class="fs-5 fw-medium">Get Best Team</span>
                 </div>
 
                 <!-- Навигация -->
